--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,10 @@ plugins {
 
 android {
     buildFeatures {
-        viewBinding = true
+        viewBinding true
     }
+
+
     namespace 'com.yuanchik.myapplicationbebe'
     compileSdk 34
 
@@ -44,6 +46,7 @@ dependencies {
     implementation libs.material
     implementation libs.androidx.activity
     implementation libs.androidx.constraintlayout
+    implementation libs.support.annotations
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
