--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,10 @@
 [versions]
-agp = "8.6.0"
+agp = "8.6.1"
 appcompatVersion = "1.7.0"
 coreKtxVersion = "1.13.1"
+glide = "4.11.0"
 hiddensearchwithrecyclerview = "0.0.5"
-kotlin = "1.9.0"
+kotlin = "1.9.22"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -19,6 +20,8 @@ androidx-appcompat-v120 = { module = "androidx.appcompat:appcompat", version.ref
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-ktx-v131 = { module = "androidx.core:core-ktx", version.ref = "coreKtxVersion" }
 appcompat-v7 = { module = "com.android.support:appcompat-v7", version.ref = "supportAnnotations" }
+compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 hiddensearchwithrecyclerview = { module = "com.nicolettilu:hiddensearchwithrecyclerview", version.ref = "hiddensearchwithrecyclerview" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
