--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     androidTestImplementation libs.androidx.espresso.core
     implementation libs.glide
     annotationProcessor libs.compiler
+    implementation libs.lottie
 }
