--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,13 @@ plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
 }
 
 android {
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 
 
