--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     implementation libs.glide
     annotationProcessor libs.compiler
     implementation libs.lottie
+    implementation libs.retrofit
+    implementation libs.converter.gson
+    implementation libs.logging.interceptor
 }
