--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,7 @@ retrofit = "2.9.0"
 roomCompiler = " 2.6.1"
 roomRuntime = "2.6.1"
 supportAnnotations = "28.0.0"
+swiperefreshlayout = "1.1.0"
 xmoshiKotlinCodegen = "1.15.1"
 
 [libraries]
@@ -41,6 +42,7 @@ androidx-room-compiler-v261 = { module = "androidx.room:room-compiler", version.
 androidx-room-compiler_x-x-x = { module = "androidx.room:room-compiler 2.6.1" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swiperefreshlayout" }
 appcompat-v7 = { module = "com.android.support:appcompat-v7", version.ref = "supportAnnotations" }
 compiler = { module = "com.github.bumptech.glide:ksp", version.ref = "glide" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
