--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
     kapt(libs.dagger.compiler)
 
     implementation libs.androidx.swiperefreshlayout
+
+    implementation libs.androidx.room.runtime
+    kapt libs.androidx.room.compiler
 }
